--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -73,7 +73,8 @@
         </div>
         
           <div *ngIf="proyecto.planificacion.length != 0 || tareasFueraLimiteEsfuerzo.length != 0" class="row mt-5 ms-3">
-            <h1>Lista de tareas priorizadas - Limite de esfuerzo {{proyecto.esfuerzoMax}} <span *ngIf="limiteSuperado == true" style="color: red;"> [No puedes superar el limite de esfuerzo]</span></h1>
+            <h1>Lista de tareas priorizadas - Limite de esfuerzo {{proyecto.esfuerzoMax}} <span *ngIf="limiteSuperado == true" style="color: red;"> [No puedes superar el limite de esfuerzo]</span>
+              <span *ngIf="tareaSeleccionada !=null" style="color: rgb(27, 144, 240);"> [Selecciona otra tarea para intercambiarla]</span></h1>
 
             <div *ngIf="proyecto.planificacion.length == 0">
               <h2 style="text-align: center;" class="mt-4">
@@ -89,6 +90,7 @@
                     <th scope="col">Fecha fin</th>
                     <th scope="col">Importancia</th>
                     <th scope="col">Esfuerzo</th>
+                    <th scope="col">Productividad</th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let tarea of proyecto.planificacion;let indice = index">
@@ -100,7 +102,9 @@
                     <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
                     <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
                     <td >{{tarea.coste}}</td>
+                    <td >{{tarea.importancia/tarea.coste}}</td>
                     <td><img class = "flecha" src="./assets/flecha-abajo.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;" (click)="bajarTarea(indice)"></td>
+                    <td><img class = "intercambio" src="./assets/intercambio.png" alt="Bajar tarea" width="45" height="45" style="cursor: pointer;"(click)="intercambiarTareas(tarea,indice,tarea,indice)">
                   </tr>
                 </tbody>
               </table>
@@ -126,6 +130,7 @@
                     <th scope="col">Fecha fin</th>
                     <th scope="col">Importancia</th>
                     <th scope="col">Esfuerzo</th>
+                    <th scope="col">Productividad</th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let tarea of tareasFueraLimiteEsfuerzo;let indice = index">
@@ -137,6 +142,7 @@
                     <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
                     <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
                     <td >{{tarea.coste}}</td>
+                    <td >{{tarea.importancia/tarea.coste}}</td>
                     <td><img class = "flecha" src="./assets/flecha-arriba.png" alt="Bajar tarea" width="30" height="30" style="cursor: pointer;"(click)="subirTarea(indice)"></td>
                   </tr>
                 </tbody>
