--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -239,6 +239,7 @@
                             <th scope="col">Fecha fin</th>
                             <th scope="col">Importancia</th>
                             <th scope="col">Esfuerzo</th>
+                            <th scope="col">Productividad</th>
                           </tr>
                         </thead>
                         <tbody *ngFor="let tarea of proyecto.planificacion;let indice = index">
@@ -250,6 +251,7 @@
                             <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
                             <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
                             <td >{{tarea.coste}}</td>
+                            <td >{{tarea.importancia/tarea.coste}}</td>
                           
                           </tr>
                         </tbody>
